<resources>
    <string name="app_name">CartaPresentacion</string>
    <string name="subtitle_main_screen">Desarrollador</string>

    <!-- ProfileActivity -->
    <string name="user_name">Vinicius Bazterrica</string>
    <string name="go_to_experiences">Ir a Experiencias</string>
    <string name="go_to_certificates">Ir a Certificados</string>
    <string name="go_to_about">Ir a Acerca de</string>

    <!--SplashActivity-->
    <string name="loading_data">Obteniendo datos</string>

    <!-- ExperienceActivity -->
    <string name="experience_title_activity">Experiencias</string>
    <string name="experience_title">Puesto :</string>
    <string name="job_type">Modalidad :</string>
    <string name="experience_description">Descripción :</string>

    <!-- CertificatesActivity -->
    <string name="certificates_title_activity">Certificados</string>

    <!-- ERRORS -->
    <string name="error_no_mail_app">No hay aplicación de correo instalada</string>
    <string name="error_not_found">Datos no encontrados</string>
    <string name="error_data">Error al obtener los datos, intente mas tarde</string>
    <string name="error_no_internet">Error de red, verifique su conexión a Internet</string>

    <!--SOCIAL-->
    <string name="linkedin" translatable="false">Linkedin</string>
    <string name="github" translatable="false">Github</string>
    <string name="email" translatable="false">Mail</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>

    <!--About-->
    <string name="about_01">Se obtiene la información desde el Splash utilizando Retrofit.\n La información se encuentra almacenada en un reporitorio de GitHub \nhttps://github.com/vinybazterrica/jsonData.</string>
    <string name="about_02">Se almacena la información en el Storage durante 30 minutos en el dispositivo, pasado este tiempo se vuelve a consultar al repositorio.</string>
    <string name="about_03">Se incorporo Firebase y Crashlytics.</string>
</resources>