<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/view_theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircularImageView" />

            <ProgressBar
                android:id="@+id/progressBarImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserName"
                style="@style/TextViewPrimaryColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="usuario nombre" />

            <TextView
                android:id="@+id/tvUserHeadLine"
                style="@style/TextViewPrimaryColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="24dp"
                android:textSize="20sp"
                tools:text="usuario puesto" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/networks_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/llLinkedin"
                android:layout_width="@dimen/social_buttons"
                android:layout_height="wrap_content"
                android:background="@drawable/social_button_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_linkedin"
                    app:tint="@color/primary" />

                <TextView
                    android:id="@+id/tvLinkedinProfile"
                    style="@style/TextViewPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/linkedin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPhone"
                android:layout_width="@dimen/social_buttons"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:background="@drawable/social_button_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_whatsapp"
                    app:tint="@color/primary" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    style="@style/TextViewPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/whatsapp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGithub"
                android:layout_width="@dimen/social_buttons"
                android:layout_height="wrap_content"
                android:layout_below="@id/llLinkedin"
                android:layout_marginTop="32dp"
                android:background="@drawable/social_button_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_github"
                    app:tint="@color/primary" />

                <TextView
                    style="@style/TextViewPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/github" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llgmail"
                android:layout_width="@dimen/social_buttons"
                android:layout_height="wrap_content"
                android:layout_below="@id/llPhone"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/social_button_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_mail"
                    app:tint="@color/primary" />

                <TextView
                    android:id="@+id/tvGmail"
                    style="@style/TextViewPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/email" />
            </LinearLayout>

        </RelativeLayout>

        <!-- LinearLayout with 2 buttons at the bottom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:visibility="gone">

            <Button
                android:id="@+id/button1"
                style="@style/ButtonsBorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="Hide" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonsBorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="Button 2" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGoToExperience"
            style="@style/ButtonsBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="20dp"
            android:text="@string/go_to_experiences" />

        <Button
            android:id="@+id/btnGoToCertificates"
            style="@style/ButtonsBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="8dp"
            android:text="@string/go_to_certificates" />

        <Button
            android:id="@+id/btnGoToAbout"
            style="@style/ButtonsBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="8dp"
            android:text="@string/go_to_about" />

    </LinearLayout>

</LinearLayout>
